fix build and tests for neural plugin with jvector in 3.2